--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,91 +2,103 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-<div id="header">
-    <h2 class="header-text">Hello, <span id="myUsername" th:text="${me.username}">USER</span></h2>
-    <div id="requests-button-container">
-        <div class="header-text">
-            <a href="">Запросы</a>
-        </div>
-    </div>
-    <div sec:authorize="hasRole('ADMIN')">
-        <a href="/admin">
-            <button>Панель администратора</button>
-        </a>
-    </div>
-</div>
-<div id="main-container">
-    <div id="left-column">
-        <div id="search-container">
-            <input id="users-search" placeholder="поиск" autocomplete="off" type="text">
-        </div>
-        <div id="users-list">
-            <div th:if="${friends.empty}">
-                <p>У вас нет друзей...</p>
-            </div>
-            <div id="users-list-block">
-                <ul id="friends-list">
-                    <li class="user" th:each="user : ${friends}" th:text="${user.firstname}" data-userId="${user.id}"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="users-result hidden">
+    <title>Messenger</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body class="bg-white text-dark d-flex flex-column min-vh-100">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white fw-bold" href="/">Messenger</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav align-items-center">
+                <li class="nav-item me-3">
+                    <span class="text-light">Привет, <strong th:text="${me.username}" id="myUsername">USER</strong></span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/profile">Профиль</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link text-warning fw-semibold" href="/admin">Админ-панель</a>
+                </li>
+                <li class="nav-item ms-3">
+                    <a class="btn btn-outline-light btn-sm" href="/logout">Выйти</a>
+                </li>
+            </ul>
         </div>
     </div>
-    <div id="chat-block" class="hidden">
-        <div id="messages-block"></div>
-        <div class="hidden" id="message-input-block">
-            <form id="messageForm">
-               <input type="text" id="messageInput" class="messageInput">
-               <button type="button" id="sendBtn">send</button>
-           </form>
-       </div>
-        <div class="hidden" id="not-friend-block">
-            <p>Вы не можете писать этому пользователю. Добавьте его в друзья, чтобы написать.</p>
-        </div>
-    </div>
-    <div id="profile-block" class="hidden">
-        <div id="username-block">
-            <span id="username"></span>
-        </div>
-        <div id="email-block">
-            <span id="email"></span>
-        </div>
-        <div class="no-req-block hidden">
-            <button class="add-friend">Добавить в друзья</button>
-        </div>
-        <div class="waiting-my-req-block hidden">
-            <button class="delete-req">Отменить запрос</button>
-            <p class="add-friend">Вы уже отправили запрос в друзья этому пользователю</p>
-        </div>
-        <div class="waiting-req-to-me-block">
-            <div id="req-message">
-                <p>Этот пользователь отправил вам запрос на добавление в друзья</p>
+</nav>
+
+<div id="main-container" class="container-fluid mt-4 flex-grow-1">
+    <div class="row h-100">
+        <div class="col-md-3 border-end pe-0">
+            <div id="search-container" class="p-3">
+                <input id="users-search" type="text" class="form-control" placeholder="Поиск пользователей" autocomplete="off">
+                <button id="backBtn" class="btn btn-outline-secondary" style="display:none;">Назад</button>
             </div>
-            <button class="accept-req button">Принять запрос</button>
-            <button class="delete-req">Отклонить запрос</button>
+
+            <div id="users-list" class="overflow-auto" style="max-height: calc(100vh - 160px);">
+                <ul id="friends-list" class="list-group list-group-flush"></ul>
+            </div>
+
+            <div class="users-result hidden"></div>
         </div>
-        <div class="delete-friend hidden">
-            <button class="delete-req">Удалить из друзей</button>
-            <p class="add-friend">Ваш друг</p>
+
+        <div id="chat-block" class="col-md-6 border-end hidden d-flex flex-column">
+            <div id="messages-block" class="flex-grow-1 p-3 overflow-auto bg-light rounded"></div>
+
+            <div id="message-input-block" class="hidden border-top p-3 bg-white">
+                <form id="messageForm" class="d-flex">
+                    <input type="text" id="messageInput" class="form-control me-2" placeholder="Введите сообщение...">
+                    <button type="button" id="sendBtn" class="btn btn-dark">Отправить</button>
+                </form>
+            </div>
+
+            <div id="not-friend-block" class="hidden p-3 text-center text-muted">
+                <p>Вы не можете писать этому пользователю. Добавьте его в друзья, чтобы начать чат.</p>
+            </div>
+        </div>
+
+        <div id="profile-block" class="col-md-3 hidden p-4">
+            <h5 id="fullname" class="fw-bold mb-2"></h5>
+            <p id="username" class="text-muted mb-3"></p>
+            <p id="birthday" class="fw-bold mb-2"></p>
+
+            <div class="no-req-block hidden">
+                <button class="btn btn-dark w-100 mb-2 add-friend">Добавить в друзья</button>
+            </div>
+            <div class="waiting-my-req-block hidden">
+                <button class="btn btn-outline-secondary w-100 mb-2 delete-req">Отменить запрос</button>
+                <p class="text-muted small">Вы уже отправили запрос этому пользователю</p>
+            </div>
+            <div class="waiting-req-to-me-block hidden">
+                <p class="text-muted small">Этот пользователь отправил вам запрос</p>
+                <button class="btn btn-success w-100 mb-2 accept-req">Принять</button>
+                <button class="btn btn-outline-danger w-100 delete-req">Отклонить</button>
+            </div>
+            <div class="delete-friend hidden">
+                <button class="btn btn-outline-danger w-100 mb-2 delete-req">Удалить из друзей</button>
+                <p class="text-muted small">Ваш друг</p>
+            </div>
         </div>
     </div>
 </div>
-<div id="contextMenu" class="context-menu hidden">
-    <ul id="menu">
-        <li id="reportMessage">Пожаловаться</li>
-    </ul>
-</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-    <script>
-        const currentUserId = [[${me.id}]];
-    </script>
-    <script src="js/main.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script>
+    const currentUserId = [[${me.id}]];
+</script>
+<script src="js/main.js"></script>
+
 </body>
 </html>
