--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -2,52 +2,76 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Регистрация</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body>
-<h1>Регистрация</h1>
-<h3>Регистрируйтесь.</h3>
-<th:block layout:fragment="content">
-    <div>
-        <form th:action="@{/sign-up}" th:method="post" th:object="${userForm}" autocomplete="off">
-            <!--                <input type="hidden" th:field="*{id}">-->
-            <div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" th:field="*{email}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-                </div>
-                <div>
-                    <label for="password">Password</label>
-                    <input type="password" id="password" th:field="*{password}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-                </div>
-                <div>
-                    <label for="username">Username</label>
-                    <input type="text" id="username" th:field="*{username}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-                </div>
-                <div>
-                    <label for="firstname">First Name</label>
-                    <input type="text" id="firstname" th:field="*{firstname}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"></div>
-                </div>
-                <div>
-                    <label for="secondname">Second Name</label>
-                    <input type="text" id="secondname" th:field="*{secondname}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('secondname')}" th:errors="*{secondname}"></div>
-                </div>
-                <div>
-                    <label for="birthday">Birthday</label>
-                    <input type="date" id="birthday" th:field="*{birthday}" autocomplete="off">
-                    <div th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></div>
-                </div>
-                <div>
-                    <button type="submit">Регистрация</button>
-                </div>
-            </div>
-        </form>
+<body class="bg-white text-dark d-flex flex-column min-vh-100">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white fw-bold" href="/">Messenger</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav align-items-center">
+                <li class="nav-item ms-3">
+                    <a class="btn btn-outline-light btn-sm" href="/login">Войти</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</th:block>
+</nav>
+
+<div class="container mt-5">
+    <h1 class="mb-3">Регистрация</h1>
+    <p class="mb-4">Заполните форму для создания аккаунта.</p>
+
+    <form th:action="@{/sign-up}" th:method="post" th:object="${userForm}" autocomplete="off" class="row g-3">
+        <div class="col-md-6">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" id="email" th:field="*{email}" class="form-control" required>
+            <div class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+        </div>
+
+        <div class="col-md-6">
+            <label for="password" class="form-label">Пароль</label>
+            <input type="password" minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" id="password" th:field="*{password}" class="form-control" required>
+            <div class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+        </div>
+
+        <div class="col-md-6">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" minlength="3" maxlength="20" id="username" th:field="*{username}" class="form-control" pattern="[a-zA-Z0-9_]{3,20}" required>
+            <div class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+        </div>
+
+        <div class="col-md-6">
+            <label for="firstname" class="form-label">First Name</label>
+            <input type="text" id="firstname" th:field="*{firstname}" class="form-control" required>
+            <div class="text-danger" th:if="${#fields.hasErrors('firstname')}" th:errors="*{firstname}"></div>
+        </div>
+
+        <div class="col-md-6">
+            <label for="secondname" class="form-label">Second Name</label>
+            <input type="text" id="secondname" th:field="*{secondname}" class="form-control">
+            <div class="text-danger" th:if="${#fields.hasErrors('secondname')}" th:errors="*{secondname}"></div>
+        </div>
+
+        <div class="col-md-6">
+            <label for="birthday" class="form-label">Birthday</label>
+            <input type="date" id="birthday" th:field="*{birthday}" class="form-control">
+            <div class="text-danger" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></div>
+        </div>
+
+        <div class="col-12 mt-3">
+            <button type="submit" class="btn btn-dark">Зарегистрироваться</button>
+        </div>
+    </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
